test/syntax/fail/attrs/test/takes_no_args.sync
[@test(5)]
let node f (x : int) = x
