test/syntax/fail/attrs/test/takes_no_args.expected
File "dummy.sync", line 1, characters 3-7:
 1 | [@test(5)]
       ^^^^

Error: The 'test' attribute requires no arguments.
